--- a/notebooks/0-start.ipynb
+++ b/notebooks/0-start.ipynb
@@ -3,7 +3,31 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Start"
+    "# Data processing"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 1. Digital PDF"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.1. Loading the PDF"
    ],
    "metadata": {
     "collapsed": false,
@@ -17,97 +41,13 @@
    "execution_count": 1,
    "outputs": [
     {
-     "data": {
-      "text/plain": "1"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6.2\n"
+     ]
     }
    ],
-   "source": [
-    "1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "import torch"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cuda.is_available()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import easyocr\n",
-    "\n",
-    "reader = easyocr.Reader([\"es\"])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "print(np.__version__)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "import pdfplumber\n",
     "\n",
@@ -127,7 +67,14 @@
    "source": [
     "import os\n",
     "\n",
-    "os.chdir(\"../\")"
+    "proj_name = \"electrificat\"\n",
+    "curr_dir = os.getcwd()\n",
+    "if proj_name in curr_dir:\n",
+    "    new_dir = curr_dir.split(proj_name)[0]\n",
+    "    new_dir = os.path.join(new_dir, proj_name)\n",
+    "    os.chdir(new_dir)\n",
+    "\n",
+    "os.getcwd()"
    ],
    "metadata": {
     "collapsed": false,
@@ -142,7 +89,8 @@
    "outputs": [],
    "source": [
     "root = os.getcwd()\n",
-    "pdf_file = os.path.join(root, \"data/raw/Factura_FE22321385375221.pdf\")"
+    "pdf_file = os.path.join(root, \"data/raw/Factura_FE22321385375221.pdf\")\n",
+    "# pdf_file = os.path.join(root, \"data/raw/HOLALUZ_628bdcf527c3c2.13969730.pdf\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -170,6 +118,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# len(pdf.pages)\n",
     "p1 = pdf.pages[1]"
    ],
    "metadata": {
@@ -195,13 +144,202 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.2. Extract the text"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "extracted_text = p1.extract_text()\n",
-    "pdf.close()\n",
-    "extracted_text"
+    "extracted_text = [page.extract_text() for page in pdf.pages]\n",
+    "extracted_text = \"\\n\".join(extracted_text)\n",
+    "# extracted_text = pdf.pages[1].extract_text()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.2.1 Extract maximum consumed power"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def extract_target(text: str, target: list) -> list:\n",
+    "    \"\"\"\n",
+    "    Return a vector of the explicit target words found on the provided text.\n",
+    "    :param text:\n",
+    "    :param target:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    found_checker = [False] * len(target)\n",
+    "    found_words = {}\n",
+    "\n",
+    "    for i, list_word in enumerate(target):\n",
+    "        words = []\n",
+    "        for word in list_word:\n",
+    "            if word in text:\n",
+    "                found_checker[i] = True\n",
+    "                print(word)\n",
+    "                words.append(word)\n",
+    "                found_words[i] = words\n",
+    "\n",
+    "    if sum(found_checker) == len(target):\n",
+    "        print(\"Target words found!\")\n",
+    "        return found_words\n",
+    "\n",
+    "    # return [word for list_word in target for word in list_word if word in text]\n",
+    "    print(\"Keywords not found.\")\n",
+    "    return []"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def extract_line(text: str, target: list) -> str:\n",
+    "    \"\"\"\n",
+    "    Extract the line where the most of the target words are located\n",
+    "    :param text:\n",
+    "    :param target:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    # assert target[0] in text, \"The target words are not present in the provided text\"\n",
+    "\n",
+    "    # Parse line splits to make a list of str (one line per slot)\n",
+    "    extracted_lines = text.splitlines()\n",
+    "    # found_target = [i for i,curr_line in enumerate(extracted_lines) for word in target if word in curr_line]\n",
+    "    # print(found_target)\n",
+    "\n",
+    "    for curr_line in extracted_lines:\n",
+    "        # print(curr_line)\n",
+    "        if all(target[x] in curr_line for x in target):\n",
+    "            return curr_line\n",
+    "    # common = Counter(found_target).most_common()\n",
+    "\n",
+    "    # for i,count in enumerate(common):\n",
+    "    #     print(i,count)\n",
+    "    #     print(len(target))\n",
+    "    #     if count[1] <= len(target):\n",
+    "    #         line_nr = count[0]\n",
+    "    #         print(line_nr)\n",
+    "    #         break\n",
+    "\n",
+    "    # line_nr = Counter(found_target).most_common()[0][0]\n",
+    "\n",
+    "    return extracted_lines[line_nr]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# for x in found:\n",
+    "#     print(found[x])\n",
+    "#\n",
+    "# for curr_line in extracted_lines:\n",
+    "#\n",
+    "#     if all(target[x] in curr_line for x in target):\n",
+    "#     return curr_line\n",
+    "extracted_lines = extracted_text.splitlines()\n",
+    "#\n",
+    "from itertools import permutations\n",
+    "\n",
+    "# permutations()\n",
+    "# for curr_line in extracted_lines:\n",
+    "#     if all(found[key] in curr_line for key in found)\n",
+    "#     # print(a)\n",
+    "vals = {}\n",
+    "myval = []\n",
+    "lengths = [len(val) for val in found.values()]\n",
+    "\n",
+    "permutes = 1\n",
+    "for x in lengths:\n",
+    "    permutes = permutes * x\n",
+    "print(permutes)\n",
+    "\n",
+    "for key, value in found.items():\n",
+    "    print(f\"key: {key} , value: {value}\")\n",
+    "\n",
+    "\n",
+    "for key in found:\n",
+    "    myval.append(found[key][0])\n",
+    "\n",
+    "vals[0] = myval\n",
+    "myval = []\n",
+    "\n",
+    "for val in lengths:\n",
+    "    if val > 1:\n",
+    "        max_dict = len(vals.keys())  # this is +1, starts at 0\n",
+    "\n",
+    "        for key, value in found.items():\n",
+    "            if len(value) > 1:\n",
+    "                myval.append(found[key][max_dict])\n",
+    "            else:\n",
+    "                myval.append(found[key][0])\n",
+    "\n",
+    "vals[max_dict] = myval\n",
+    "myval = []\n",
+    "\n",
+    "print(vals)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from itertools import permutations, product\n",
+    "\n",
+    "result = []\n",
+    "for perm in permutations([found[0], found[1]]):\n",
+    "    for prod in product(*perm):\n",
+    "        if prod[0] in found[0]:\n",
+    "            result.append(prod)\n",
+    "print(result)"
    ],
    "metadata": {
     "collapsed": false,
@@ -246,7 +384,7 @@
     "    \"Màximes\",\n",
     "    \"Máximas\",\n",
     "}\n",
-    "year = {\"any\", \"año\", \"Any\", \"Año\"}\n",
+    "year = [\"any\", \"año\", \"Any\", \"Año\"]\n",
     "words = [power, maxima, year]"
    ],
    "metadata": {
@@ -261,14 +399,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Get the exact words\n",
-    "found = []\n",
-    "dummy = [\n",
-    "    found.append(word)\n",
-    "    for list_word in words\n",
-    "    for word in list_word\n",
-    "    if str(word) in extracted_text\n",
-    "]\n",
+    "found = extract_target(extracted_text, words)\n",
     "found"
    ],
    "metadata": {
@@ -283,8 +414,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Make the extracted text a list of str lines\n",
-    "extracted_text = extracted_text.splitlines()"
+    "target_line = extract_line(extracted_text, found)\n",
+    "target_line"
    ],
    "metadata": {
     "collapsed": false,
@@ -298,12 +429,27 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Extract the line where the words are located\n",
-    "for i, line in enumerate(extracted_text):\n",
-    "    if found[-1] in line:\n",
-    "        print(f\"Target words found on line {i}:\")\n",
-    "        target_line = extracted_text[i]\n",
-    "        print(target_line)"
+    "def extract_target_lines(line: str) -> list:\n",
+    "    \"\"\"\n",
+    "    Return a stripped line with the desired P1, P2, P3 power count\n",
+    "    :param line:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "\n",
+    "    p1 = p2 = p3 = None\n",
+    "\n",
+    "    if \"P1\" in line:\n",
+    "        p1 = line.split(\"P1\")[0]\n",
+    "        line = line.split(\"P1\")[-1]  # Not change the order\n",
+    "\n",
+    "    if \"P2\" in line:\n",
+    "        p2 = line.split(\"P2\")[0]\n",
+    "\n",
+    "    if \"P3\" in line:\n",
+    "        line = line.split(\"P2\")[-1]\n",
+    "        p3 = line.split(\"P3\")[0]\n",
+    "\n",
+    "    return [p1, p2, p3]"
    ],
    "metadata": {
     "collapsed": false,
@@ -317,27 +463,36 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import re\n",
+    "def extract_numbers(text: str) -> (float, None):\n",
+    "    \"\"\"\n",
+    "    Input some text and extract a single number as a float\n",
+    "    :param text:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    import re\n",
     "\n",
-    "p1 = p2 = p3 = \"Unknown\"\n",
-    "line = target_line\n",
+    "    assert (\n",
+    "        len(re.findall(r\"\\d+\", text)) > 0\n",
+    "    ), \"The input string does not contain any number\"\n",
     "\n",
-    "if \"P1\" in line:\n",
-    "    p1 = line.split(\"P1\")[0]\n",
-    "    numbers = re.findall(r\"\\d\", p1)\n",
-    "    # numbers.split(numbers[0])\n",
+    "    # Replace , with . for decimal position, if found.\n",
+    "    if \",\" in text:\n",
+    "        text = text.replace(\",\", \".\")\n",
     "\n",
-    "    line = line.split(\"P1\")[-1]\n",
-    "if \"P2\" in line:\n",
-    "    p2 = line.split(\"P2\")[0]\n",
-    "if \"P3\" in line:\n",
-    "    line = line.split(\"P2\")[-1]\n",
-    "    p3 = line.split(\"P3\")[0]\n",
+    "    if \".\" in text:\n",
+    "        number = re.findall(r\"\\d+\\.\\d+\", text)\n",
+    "        if float(number[0]) == 0.0:\n",
+    "            return None\n",
     "\n",
+    "        return float(number[0])\n",
     "\n",
-    "print(f\"P1: {p1}\")\n",
-    "print(f\"P2: {p2}\")\n",
-    "print(f\"P3: {p3}\")"
+    "    # When there's no decimal position\n",
+    "    number = re.findall(r\"\\d+\", text)\n",
+    "\n",
+    "    if number[0] == 0:\n",
+    "        return None\n",
+    "\n",
+    "    return number[0]"
    ],
    "metadata": {
     "collapsed": false,
@@ -351,16 +506,21 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import re\n",
+    "def extract_pmax(p_range: list) -> list:\n",
+    "    \"\"\"\n",
+    "    From the lines identified with P1,P2,P3, extract the numerical value.\n",
+    "    Example: \"Here you have P1 0.34 kWh and P2 for 10,00 kwh\" -> [0.34, 10.0]\n",
+    "    :param p_range:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    pmax = [\n",
+    "        extract_numbers(px)\n",
+    "        for px in p_range\n",
+    "        if px is not None and extract_numbers(px) is not None\n",
+    "    ]\n",
     "\n",
-    "numbers = re.findall(r\"\\d\", p1)\n",
-    "if \",\" in p1:\n",
-    "    p1 = p1.split(\",\")\n",
-    "    integers = re.findall(r\"\\d\", p1[0])\n",
-    "    decimals = re.findall(r\"\\d\", p1[-1])\n",
-    "    number = int(integers) + len(decimals) * 10 / int(decimals)\n",
-    "if \".\" in p1:\n",
-    "    p1 = p1.split(\".\")"
+    "    [print(f\"P{i+1} maximum power: {pmax[i]} kWh\") for i in range(len(pmax))]\n",
+    "    return pmax"
    ],
    "metadata": {
     "collapsed": false,
@@ -371,22 +531,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "p_ranges = extract_target_lines(target_line)\n",
+    "print(p_ranges)\n",
+    "p_max = extract_pmax(p_ranges)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.2.2. Extract total consumed power"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "total = {\"total\", \"Total\", \"TOTAL\"}\n",
+    "consumed = {\n",
+    "    \"consum\",\n",
+    "    \"Consum\",\n",
+    "    \"CONSUM\",\n",
+    "    \"consumo\",\n",
+    "    \"Consumo\",\n",
+    "    \"CONSUMO\",\n",
+    "    \"consumit\",\n",
+    "    \"Consumit\",\n",
+    "    \"CONSUMIT\",\n",
+    "    \"consumido\",\n",
+    "    \"Consumido\",\n",
+    "    \"CONSUMIDO\",\n",
+    "    \"consumida\",\n",
+    "    \"Consumida\",\n",
+    "    \"CONSUMIDA\",\n",
+    "}\n",
+    "\n",
+    "words = [total, consumed]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "found = extract_target(extracted_text, words)\n",
+    "print(found)\n",
+    "target_line = extract_line(extracted_text, found)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "target_line"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "total_consumed = extract_numbers(target_line)\n",
+    "print(total_consumed)\n",
+    "print(f\"Total energy consumed: {total_consumed} kWh\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.2.3. Extract total price paid"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "total = {\"total\", \"Total\", \"TOTAL\"}\n",
+    "pagar = {\"pagar\", \"Pagar\", \"PAGAR\"}\n",
+    "words = [total, pagar]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "found = extract_target(extracted_text, words)\n",
+    "target_line = extract_line(extracted_text, found)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'number' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [122]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mnumber\u001B[49m\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'number' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total paid for the bill: 1€\n"
      ]
     }
    ],
    "source": [
-    "number"
+    "total_paid = extract_numbers(target_line)\n",
+    "print(f\"Total paid for the bill: {total_paid}€\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -396,51 +703,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 127,
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [127]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mintegers\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mTypeError\u001B[0m: int() argument must be a string, a bytes-like object or a real number, not 'list'"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "int(integers)"
+    "### 1.2.4. Extract prices paid for different power ranges"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['2']"
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "integers"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
